[package]
name = "typst-extra-docs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.54"
mdbook-markdown = "0.5.2"
mdbook-preprocessor = "0.5.2"
pulldown-cmark-to-cmark = "22.0.0"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.149"
unscanny = "0.1.0"
url = "2.5.8"
